--- a/resources/sass/landings/common.scss
+++ b/resources/sass/landings/common.scss
@@ -15,6 +15,21 @@ header {
 	max-width: 1205px;
 	margin: 0 auto;
 }
+.col-3 {
+	display: inline-block;
+	width: 31.5855555%; 
+}
+.col-4 {
+	display: inline-block;
+	width: 31.28889%;
+}
+.col-8 {
+	display: inline-block;
+	width: 66.171111%;
+}
+.align_center {
+	text-align: center;
+}
 
 // Styles
 
@@ -121,6 +136,7 @@ header {
 	}
 }
 
+// Head slide section
 .headAction {
 	&--box {
 		position: relative;
@@ -168,6 +184,223 @@ header {
 		&_audio {
 			background: transparent url('../../images/oval_3.png') no-repeat center center;
 		}
+	}
+
+
+}
+
+// Kit section
+.sectionKit {
+	position: relative;
+	padding: 20px 0;
+	background: $purple-bg;
+
+	&:before {
+		content: '';
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background: transparent url('../../images/icon-bg.png') no-repeat;
+		background-size: 100% auto;
+		background-position: 0 -342px;
+	}
+
+	.spacer {
+		min-width: 30px;
+		background: transparent url('../../images/plus.svg') no-repeat;
+		background-position: 50% 50%;
+	}
+
+	&--box {
+		display: flex;
+		justify-content: space-between;
+		position: relative;
+	}
+
+	&--item {
+		position: relative;
+		border: 8px solid #fff;
+		border-radius: 100%;
+		box-shadow: 0px 13px 20px rgba(0,0,0,.15);
+	}
+
+	&--infoBox {
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		border-radius: 100%;
+		background: transparent;
+		overflow: hidden;
+	}
+
+	&--info {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		position: absolute;
+		top: 77%;
+		height: 100%;
+		left: 0;
+		right: 0;
+		border-radius: 100%;
+		overflow: hidden;
+		background: $yellow-color;
+		padding: 30% 10% 16%;
+		@include animate-03($anim-03);
+
+		&:before {
+			content: '';
+			position: absolute;
+			top: 20px;
+			left: calc(50% - 15px);
+			right: calc(50% - 15px);
+			width: 30px;
+			height: 30px;
+			background: transparent url('../../images/collection-sprite.png') no-repeat;
+			background-position: 0 0;
+		}
+	}
+
+	&--infoBox:hover &--info {
+		top: 0;
+	}
+
+	&--title {
+		width: 100%;
+		text-align: center;
+		font-size: 1.2em;
+		margin-bottom: 10px;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+		overflow: hidden;
+	}
+	&--text {
+		text-align: center;
+		max-height: 40%;
+		overflow: hidden;
+	}
+
+
+}
+
+// Order section
+.sectionOrder {
+	padding: 70px 0;
+
+	&--box {
+		max-width: 625px;
+		margin: 0 auto;
+	}
+
+	&--title {
+		text-align: center;
+		font-weight: 600;
+	}
+}
+
+// Order form
+.orderForm {
+	padding-top: 20px;
+
+	&--row {
+		display: inline-block;
+		width: 100%;
+		padding: 0 0 30px;
+	}
+
+	&--itemLabel {
+		display: inline-block;
+		width: 100%;
+		padding: 30px 0;
+		border-top: 1px solid $hr-color;
+		font-weight: 600;
+	}
+
+	&--row:first-child &--itemLabel {
+		padding-top: 0;
+		border-top: none;
+	}
+
+	&_string {
+		display: flex;
+		justify-content: flex-start;
+		align-items: center;
+	}
+
+	.count_label {
+		width: auto;
+		margin: auto 20px auto 0;
+	}
+	.formInput.count_input {
+		width: 70px;
+		text-align: center;
+	}
+
+	&--item label {
+		display: inline-block;
+		width: 100%;
+		margin-bottom: 15px;
+	} 
+
+	&--item.col-3 {
+		margin: 0 5px;
+
+		&:first-child {
+			margin-left: 0;
+		}
+
+		&:nth-child(3n) {
+			margin-right: 0;
+		}
+	}
+
+	&--item.col-8 {
+		margin: 0 5px 0 0;
+	}
+	&--item.col-4 {
+		margin: 0 0 0 5px;
+	}
+
+	// Order radio button
+	.cbx {
+		display: inline-block;
+		position: relative;
+		float: left;
+		width: calc(50% - 2px);
+
+		.formCbx {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			z-index: 1;
+			opacity: 0;
+		}
+
+		label {
+			display: inline-block;
+			position: relative;
+			background: #fff;
+			border: 1px solid #000;
+			padding: 35px 15px;
+			margin: 0;
+			text-align: center;
+		}
+		.formCbx:checked + label {
+			background: #000;
+			color: #fff;
+		}
+
+		&:first-child label {
+			border-radius: $borderRadius 0 0 $borderRadius;
+		}
+		&:last-child label {
+			border-radius: 0 $borderRadius $borderRadius 0;
+		}
+
 	}
 
 
