--- a/resources/sass/_reset.scss
+++ b/resources/sass/_reset.scss
@@ -30,8 +30,21 @@ time, mark, audio, video {
 }
 html,
 body {
-  height: 100%;
-  margin: 0 !important;
+    height: 100%;
+    margin: 0 !important;
+
+    @media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+		& {
+            width: 100%;
+            overflow-x: hidden;
+		}
+	}
+	@media screen and (max-width: $max-mobile) {
+		& {
+			width: 100%;
+            overflow-x: hidden;
+		}
+    }
 }
 body {
     font-size: 15px;
@@ -195,6 +208,7 @@ input, select {
 }
 input:focus,
 select:focus,
+textarea:focus,
 input[type="checkbox"]:focus + label:before {
     content: '';
     box-shadow: inset 2px 2px 1px rgba(206, 0, 0, 0.5) !important;
@@ -302,7 +316,6 @@ h2,
     color: $text-color;
     font-size: 1.9em;
 }
-
 
 // Class
 .spacer {
