--- a/resources/sass/inputs.scss
+++ b/resources/sass/inputs.scss
@@ -21,3 +21,9 @@ textarea,
 textarea.formInput {
 	min-height: 118px;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
