--- a/public/css/app.css
+++ b/public/css/app.css
@@ -89,6 +89,22 @@ body {
   margin: 0 !important;
 }
 
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  html,
+  body {
+    width: 100%;
+    overflow-x: hidden;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  html,
+  body {
+    width: 100%;
+    overflow-x: hidden;
+  }
+}
+
 body {
   font-size: 15px;
   line-height: 1;
@@ -278,6 +294,7 @@ select {
 
 input:focus,
 select:focus,
+textarea:focus,
 input[type=checkbox]:focus + label:before {
   content: "";
   box-shadow: inset 2px 2px 1px rgba(206, 0, 0, 0.5) !important;
@@ -456,6 +473,9 @@ h2,
 }
 
 .btn-bay {
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
   width: 255px;
   font-weight: 600;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.15);
@@ -481,6 +501,12 @@ textarea.formInput {
   min-height: 118px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 header {
   position: absolute;
   top: 0;
@@ -488,11 +514,37 @@ header {
   right: 0;
 }
 
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  header {
+    position: relative;
+    margin-bottom: -110px;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  header {
+    position: relative;
+    margin-bottom: -110px;
+  }
+}
+
 .container {
   width: 100%;
-  min-width: 320px;
+  min-width: 300px;
   max-width: 1205px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .container {
+    padding: 0 10px;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .container {
+    padding: 0px;
+  }
 }
 
 .col-3 {
@@ -510,6 +562,15 @@ header {
   width: 66.171111%;
 }
 
+@media screen and (max-width: 719px) {
+  .col-3,
+  .col-4,
+  .col-8 {
+    width: 100% !important;
+    margin: 0 0 20px;
+  }
+}
+
 .align_center {
   text-align: center;
 }
@@ -523,11 +584,39 @@ header {
   color: #fff;
 }
 
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .head--topline {
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px 20px 0 !important;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .head--topline {
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px 10px 0 !important;
+  }
+}
+
 .head--topline a {
   color: #fff;
   font-size: 1.25em;
   white-space: nowrap;
   letter-spacing: 1px;
+}
+
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .head--topline a {
+    font-size: 0.7em;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .head--topline a {
+    font-size: 0.7em;
+  }
 }
 
 .head--topline a:focus {
@@ -545,6 +634,20 @@ header {
   background: #fff;
 }
 
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .head--contacts {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .head--contacts {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .head--logo {
   flex-shrink: 0;
   width: 273px;
@@ -552,9 +655,29 @@ header {
   background: url(/images/logo.png?da291201e0f057d8011575a2b161e329) no-repeat;
 }
 
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .head--logo {
+    order: 1;
+    margin-top: 20px;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .head--logo {
+    order: 1;
+    margin-top: 20px;
+  }
+}
+
 .head--mail {
   position: relative;
   margin-right: 60px;
+}
+
+@media screen and (max-width: 719px) {
+  .head--mail {
+    margin-right: 5px;
+  }
 }
 
 .head--mail:after {
@@ -586,9 +709,32 @@ header {
   text-align: center;
 }
 
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .headSlide--item {
+    min-height: auto;
+    padding-top: 140px;
+    overflow: hidden;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .headSlide--item {
+    padding-top: 140px;
+    padding-bottom: 30px;
+    overflow: hidden;
+  }
+}
+
 .headSlide .firstSlide {
   background: url(/images/first_slide_bg.jpg?e6a7ffc0c93961c4433479b6b1b5c15b) no-repeat;
   background-size: cover;
+}
+
+@media screen and (max-width: 719px) {
+  .headSlide .firstSlide {
+    background-size: auto 100%;
+    background-position: 62% 0;
+  }
 }
 
 .headSlide--box {
@@ -598,11 +744,37 @@ header {
   margin: auto;
 }
 
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .headSlide--box {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .headSlide--box {
+    width: 100%;
+  }
+}
+
 .headSlide--title,
 .headSlide--subtitle {
   margin-bottom: 45px;
   color: #fff;
   font-size: 2.7em;
+}
+
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .headSlide--title,
+  .headSlide--subtitle {
+    font-size: 1.7em;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .headSlide--title,
+  .headSlide--subtitle {
+    font-size: 1.5em;
+  }
 }
 
 .headSlide--title {
@@ -633,6 +805,32 @@ header {
   background: transparent url(/images/star.png?cc97a1e4e32da7a4f620bbe3f94e23e1) no-repeat center center;
 }
 
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .headAction--box:before {
+    left: auto;
+    width: 150px;
+    height: 150px;
+    background-size: cover;
+    left: auto;
+    right: 0;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .headAction--box:before {
+    bottom: -84px;
+    left: auto;
+    width: 150px;
+    height: 150px;
+    right: -25px;
+    background-size: cover;
+    z-index: 1;
+    -webkit-transform: rotate(335deg);
+    -moz-transform: rotate(335deg);
+    -o-transform: rotate(335deg);
+  }
+}
+
 .headAction--before {
   margin-bottom: 35px;
 }
@@ -648,6 +846,13 @@ header {
   margin-bottom: 50px;
 }
 
+@media screen and (max-width: 719px) {
+  .headAction--itemBox {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
 .headAction--item {
   display: flex;
   justify-content: center;
@@ -655,6 +860,13 @@ header {
   text-align: center;
   width: 33.33333%;
   height: 80px;
+}
+
+@media screen and (max-width: 719px) {
+  .headAction--item {
+    margin: auto;
+    background-size: contain !important;
+  }
 }
 
 .headAction--item_image {
@@ -693,10 +905,34 @@ header {
   background-position: 50% 50%;
 }
 
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .sectionKit .spacer {
+    background-size: 15px;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .sectionKit .spacer {
+    background-size: 15px;
+  }
+}
+
 .sectionKit--box {
   display: flex;
   justify-content: space-between;
   position: relative;
+}
+
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .sectionKit--box {
+    padding: 0 20px;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .sectionKit--box {
+    padding: 0 20px;
+  }
 }
 
 .sectionKit--item {
@@ -704,6 +940,18 @@ header {
   border: 8px solid #fff;
   border-radius: 100%;
   box-shadow: 0px 13px 20px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .sectionKit--item {
+    border: 2px solid #fff;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .sectionKit--item {
+    border: 2px solid #fff;
+  }
 }
 
 .sectionKit--infoBox {
@@ -733,6 +981,18 @@ header {
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
+}
+
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .sectionKit--info {
+    display: none !important;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .sectionKit--info {
+    display: none !important;
+  }
 }
 
 .sectionKit--info:before {
@@ -769,6 +1029,18 @@ header {
 
 .sectionOrder {
   padding: 70px 0;
+}
+
+@media screen and (min-width: 720px) and (max-width: 1025px) {
+  .sectionOrder {
+    padding: 70px 10px 30px;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  .sectionOrder {
+    padding: 70px 5px 30px;
+  }
 }
 
 .sectionOrder--box {
@@ -810,14 +1082,34 @@ header {
   align-items: center;
 }
 
+@media screen and (max-width: 719px) {
+  .orderForm_string {
+    flex-direction: column;
+  }
+}
+
 .orderForm .count_label {
   width: auto;
   margin: auto 20px auto 0;
 }
 
+@media screen and (max-width: 719px) {
+  .orderForm .count_label {
+    width: 100%;
+    margin: 0 0 20px;
+  }
+}
+
 .orderForm .formInput.count_input {
   width: 70px;
   text-align: center;
+}
+
+@media screen and (max-width: 719px) {
+  .orderForm .formInput.count_input {
+    width: 100%;
+    text-align: left;
+  }
 }
 
 .orderForm--item label {
@@ -846,6 +1138,15 @@ header {
   margin: 0 0 0 5px;
 }
 
+@media screen and (max-width: 719px) {
+  .orderForm--item.col-3,
+  .orderForm--item.col-8,
+  .orderForm--item.col-4 {
+    width: 100% !important;
+    margin: 0 0 20px;
+  }
+}
+
 .orderForm .cbx {
   display: inline-block;
   position: relative;
@@ -869,6 +1170,12 @@ header {
   padding: 35px 15px;
   margin: 0;
   text-align: center;
+}
+
+@media screen and (max-width: 719px) {
+  .orderForm .cbx label {
+    padding: 15px;
+  }
 }
 
 .orderForm .cbx .formCbx:checked + label {
