--- a/resources/sass/button.scss
+++ b/resources/sass/button.scss
@@ -36,6 +36,9 @@
 	}
 
 	&-bay {
+		display: flex;
+		margin: 0 auto;
+		justify-content: center;
 		width: 255px;
 		font-weight: 600;
 		box-shadow: 0px 5px 10px rgba(0,0,0,0.15);
