--- a/resources/sass/landings/common.scss
+++ b/resources/sass/landings/common.scss
@@ -7,17 +7,41 @@ header {
 	position: absolute;
 	top: 0;
     left: 0;
-    right: 0;
+	right: 0;
+
+	@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+		& {
+			position: relative;
+			margin-bottom: -110px;
+		}
+	}
+	@media screen and (max-width: $max-mobile) {
+		& {
+			position: relative;
+			margin-bottom: -110px;
+		}
+	}
 }
 .container {
 	width: 100%;
-	min-width: 320px;
+	min-width: 300px;
 	max-width: 1205px;
 	margin: 0 auto;
+
+	@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+		& {
+			padding: 0 10px;
+		}
+	}
+	@media screen and (max-width: $max-mobile) {
+		& {
+			padding: 0px;
+		}
+	}
 }
 .col-3 {
 	display: inline-block;
-	width: 31.5855555%; 
+	width: 31.5855555%;
 }
 .col-4 {
 	display: inline-block;
@@ -27,6 +51,15 @@ header {
 	display: inline-block;
 	width: 66.171111%;
 }
+@media screen and (max-width: $max-mobile) {
+	.col-3,
+	.col-4,
+	.col-8 {
+		width: 100% !important;
+		margin: 0 0 20px;
+	}
+}
+
 .align_center {
 	text-align: center;
 }
@@ -43,11 +76,37 @@ header {
 		padding: 65px 20px 0;
 		color: #fff;
 
+		@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+			& {
+				flex-direction: column;
+				justify-content: space-between;
+				padding: 30px 20px 0 !important;
+			}
+		}
+		@media screen and (max-width: $max-mobile) {
+			& {
+				flex-direction: column;
+				justify-content: space-between;
+				padding: 30px 10px 0 !important;
+			}
+		}
+
 		a {
 			color: #fff;
 			font-size: 1.25em;
     		white-space: nowrap;
-    		letter-spacing: 1px;
+			letter-spacing: 1px;
+			
+			@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+				& {
+					font-size: 0.7em;
+				}
+			}
+			@media screen and (max-width: $max-mobile) {
+				& {
+					font-size: 0.7em;
+				}
+			}
 
 			&:focus {
 				position: relative;
@@ -65,16 +124,50 @@ header {
 		}
 	}
 
+	&--contacts {
+		@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+			& {
+				display: flex;
+				justify-content: space-between;
+			}
+		}
+		@media screen and (max-width: $max-mobile) {
+			& {
+				display: flex;
+				justify-content: space-between;
+			}
+		}
+	}
+
 	&--logo {
 		flex-shrink: 0;
 		width: 273px;
 		height: 45px;
 		background: url('../../images/logo.png') no-repeat;
+
+		@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+			& {
+				order: 1;
+				margin-top: 20px;
+			}
+		}
+		@media screen and (max-width: $max-mobile) {
+			& {
+				order: 1;
+				margin-top: 20px;
+			}
+		}
 	}
 
 	&--mail {
 		position: relative;
 		margin-right: 60px;
+
+		@media screen and (max-width: $max-mobile) {
+			& {
+				margin-right: 5px;
+			}
+		}
 
 		&:after {
 			content: '';
@@ -105,10 +198,32 @@ header {
 		padding-bottom: 70px;
 		color: $white-color;
 		text-align: center;
+
+		@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+			& {
+				min-height: auto;
+				padding-top: 140px;
+				overflow: hidden;
+			}
+		}
+		@media screen and (max-width: $max-mobile) {
+			& {
+				padding-top: 140px;
+				padding-bottom: 30px;
+				overflow: hidden;
+			}
+		}
 	}
 	.firstSlide {
 		background: url('../../images/first_slide_bg.jpg') no-repeat;
 		background-size: cover;
+
+		@media screen and (max-width: $max-mobile) {
+			& {
+				background-size: auto 100%;
+    			background-position: 62% 0;
+			}
+		}
 	}
 
 	&--box {
@@ -116,6 +231,17 @@ header {
 		flex-direction: column;
 		width: 60%;
 		margin: auto;
+
+		@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+			& {
+				width: 100%;
+			}
+		}
+		@media screen and (max-width: $max-mobile) {
+			& {
+				width: 100%;
+			}
+		}
 	}
 
 	&--title,
@@ -123,6 +249,17 @@ header {
 		margin-bottom: 45px;
 		color: $white-color;
 		font-size: 2.7em; 
+
+		@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+			& {
+				font-size: 1.7em;
+			}
+		}
+		@media screen and (max-width: $max-mobile) {
+			& {
+				font-size: 1.5em;
+			}
+		}
 	}
 	&--title {
 		font-weight: 600;
@@ -151,6 +288,31 @@ header {
 			width: 260px;
 			height: 260px;
 			background: transparent url('../../images/star.png') no-repeat center center;
+
+			@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+				& {
+					left: auto;
+					width: 150px;
+					height: 150px;
+					background-size: cover;
+					left: auto;
+					right: 0;
+				}
+			}
+			@media screen and (max-width: $max-mobile) {
+				& {
+					bottom: -84px;
+					left: auto;
+					width: 150px;
+					height: 150px;
+					right: -25px;
+					background-size: cover;
+					z-index: 1;
+					-webkit-transform: rotate(335deg);
+					 -moz-transform: rotate(335deg);
+				 	  -o-transform: rotate(335deg);
+				}
+			}
 		}
 	}
 
@@ -166,6 +328,13 @@ header {
 		display: flex;
 		justify-content: space-between;
 		margin-bottom: 50px;
+
+		@media screen and (max-width: $max-mobile) {
+			& {
+				flex-direction: column;
+				justify-content: center;
+			}
+		}
 	}
 	&--item {
 		display: flex;
@@ -174,6 +343,13 @@ header {
 		text-align: center;
 		width: 33.33333%;
 		height: 80px;
+
+		@media screen and (max-width: $max-mobile) {
+			& {
+				margin: auto;
+				background-size: contain !important;
+			}
+		}
 
 		&_image {
 			background: transparent url('../../images/oval_1.png') no-repeat center center;
@@ -185,8 +361,6 @@ header {
 			background: transparent url('../../images/oval_3.png') no-repeat center center;
 		}
 	}
-
-
 }
 
 // Kit section
@@ -211,12 +385,34 @@ header {
 		min-width: 30px;
 		background: transparent url('../../images/plus.svg') no-repeat;
 		background-position: 50% 50%;
+
+		@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+			& {
+				background-size: 15px;
+			}
+		}
+		@media screen and (max-width: $max-mobile) {
+			& {
+				background-size: 15px;
+			}
+		}
 	}
 
 	&--box {
 		display: flex;
 		justify-content: space-between;
 		position: relative;
+
+		@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+			& {
+				padding: 0 20px;
+			}
+		}
+		@media screen and (max-width: $max-mobile) {
+			& {
+				padding: 0 20px;
+			}
+		}
 	}
 
 	&--item {
@@ -224,6 +420,17 @@ header {
 		border: 8px solid #fff;
 		border-radius: 100%;
 		box-shadow: 0px 13px 20px rgba(0,0,0,.15);
+
+		@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+			& {
+				border: 2px solid #fff;
+			}
+		}
+		@media screen and (max-width: $max-mobile) {
+			& {
+				border: 2px solid #fff;
+			}
+		}
 	}
 
 	&--infoBox {
@@ -251,6 +458,17 @@ header {
 		background: $yellow-color;
 		padding: 30% 10% 16%;
 		@include animate-03($anim-03);
+
+		@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+			& {
+				display: none !important;
+			}
+		}
+		@media screen and (max-width: $max-mobile) {
+			& {
+				display: none !important;
+			}
+		}
 
 		&:before {
 			content: '';
@@ -291,6 +509,17 @@ header {
 .sectionOrder {
 	padding: 70px 0;
 
+	@media screen and (min-width: $min-tablet) and (max-width: $max-tablet) {
+		& {
+			padding: 70px 10px 30px;
+		}
+	}
+	@media screen and (max-width: $max-mobile) {
+		& {
+			padding: 70px 5px 30px;
+		}
+	}
+
 	&--box {
 		max-width: 625px;
 		margin: 0 auto;
@@ -329,15 +558,35 @@ header {
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
+		
+		@media screen and (max-width: $max-mobile) {
+			& {
+				flex-direction: column;
+			}
+		}
 	}
 
 	.count_label {
 		width: auto;
 		margin: auto 20px auto 0;
+
+		@media screen and (max-width: $max-mobile) {
+			& {
+				width: 100%;
+				margin: 0 0 20px;
+			}
+		}
 	}
 	.formInput.count_input {
 		width: 70px;
 		text-align: center;
+
+		@media screen and (max-width: $max-mobile) {
+			& {
+				width: 100%;
+				text-align: left;
+			}
+		}
 	}
 
 	&--item label {
@@ -364,6 +613,14 @@ header {
 	&--item.col-4 {
 		margin: 0 0 0 5px;
 	}
+	@media screen and (max-width: $max-mobile) {
+		&--item.col-3,
+		&--item.col-8,
+		&--item.col-4 {
+			width: 100% !important;
+			margin: 0 0 20px;
+		}
+	}
 
 	// Order radio button
 	.cbx {
@@ -388,6 +645,12 @@ header {
 			padding: 35px 15px;
 			margin: 0;
 			text-align: center;
+
+			@media screen and (max-width: $max-mobile) {
+				& {
+					padding: 15px;
+				}
+			}
 		}
 		.formCbx:checked + label {
 			background: #000;
